ingress-spin.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: spinnaker-ingress
  namespace: spinnaker
spec:
 rules:
 - host: spinnaker.opencloud.amx.com
   http:
     paths:
     - backend:
         serviceName: spin-deck
         servicePort: 9000
       path: /
 - host: spin-gate.opencloud.amx.com
   http:
     paths:
     - backend:
         serviceName: spin-gate
         servicePort: 8084
       path: /
